<resources>
    <string name="app_name">TestAndroid</string>
    <string name="tittle">Programming Calculator</string>
    <string name="binary_number">Binary Number</string>
    <string name="decimal_number">Decimal Number</string>
    <string name="octal_number">Octal Number</string>
    <string name="hexDecimal_number">HexDecimal Number</string>
    <string name="clearButton">Clear</string>
</resources>